# tsu-sparse-polynomials

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
thermolab/data/: breast_cancer.csv  iris.csv  xor.csv
thermolab/experiments/: breast_cancer.py  iris.py  ising.py
thermolab/experiments/xor/: high_order.py  subset_scan.py  thrml.py
thermolab/shared/: datasets.py  encoding.py  interactions.py  subsets.py  thrml.py
