[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermolab"
version = "0.1.0"
description = "Thermodynamic sampling lab for sparse polynomial experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Extropic Labs" }
]
dependencies = [
  "jax==0.6.2",
  "jaxlib==0.6.2",
  "numpy==1.26.4",
  "thrml==0.1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thermolab*"]

[tool.setuptools.package-data]
"thermolab.data" = ["*.csv"]
